Major Update: TC-based patient system, DB auth, modern UI/UX
- Patient TC as primary key (11-digit Turkish ID)
- Database-backed authentication (nurse/doctor accounts)
- Dashboard with real-time statistics
- Waiting room public display screen
- Patient history timeline view
- Mobile queue status API endpoint
- Modern UI with soft gradient backgrounds
- Professional card-based design
- Turkish localization
- Improved triage form with vitals
- Enhanced doctor notes with prescriptions
- Clean, comment-free codebase